<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="divide">&#247;</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">&#215;</string>
    <string name="bracket">(</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">&#8211;</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">&#43;</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="backspace">Backspace</string>
</resources>