<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:weightSum="7.2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="24dp"
        android:weightSum="2"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txt_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center|end"
            android:padding="10dp"
            android:textColor="#FFF"
            android:textSize="24sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/txt_input"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="center|end"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:scrollbars="vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="#FFF"
            android:textSize="48sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@drawable/section_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="4"
            tools:ignore="NestedWeights,UselessParent">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/operator_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="clearCalculator"
                android:text="@string/c"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_bracket"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:onClick="onClickBracket"
                android:layout_weight="1"
                android:background="@drawable/operator_bg"
                android:fontFamily="@font/montserrat"
                android:text="@string/bracket"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_percent"
                android:layout_width="0dp"
                android:onClick="onClickOperator"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/operator_bg"
                android:fontFamily="@font/montserrat"
                android:text="@string/percent"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:onClick="onClickOperator"
                android:background="@drawable/operator_bg"
                android:fontFamily="@font/montserrat"
                android:text="@string/divide"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="4"
            tools:ignore="NestedWeights,UselessParent">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/_7"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/_8"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/_9"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:onClick="onClickOperator"
                android:background="@drawable/operator_bg"
                android:fontFamily="@font/montserrat"
                android:text="@string/multiply"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="4"
            tools:ignore="NestedWeights,UselessParent">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/_4"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/_5"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/_6"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/operator_bg"
                android:onClick="onClickOperator"
                android:fontFamily="@font/montserrat"
                android:text="@string/minus"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="4"
            tools:ignore="NestedWeights,UselessParent">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/_1"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/_2"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/_3"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:onClick="onClickOperator"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/operator_bg"
                android:fontFamily="@font/montserrat"
                android:text="@string/plus"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="4"
            tools:ignore="NestedWeights,UselessParent">

            <Button
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/_0"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_decimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onClickDigit"
                android:text="@string/decimal"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

            <ImageButton
                android:id="@+id/btn_backspace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:onClick="onClickBackspace"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:contentDescription="@string/backspace"
                android:src="@drawable/ic_backspace"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/equal_bg"
                android:fontFamily="@font/montserrat"
                android:onClick="onEvaluation"
                android:text="@string/equal"
                android:textColor="#E1E1E1"
                android:textSize="32sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>